# Stage

./: index.html
css/: style.css
js/: app.js
projet_demineur/: CMakeLists.txt  en_US.ts  fr_FR.ts  main.cpp  projet.cpp  projet.h  resource.qrc
